--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Docker: para construir sin dolor de cabeza </li>
          <li> Ansible </li>
-         <li> Integración continua: Madurez y Productividad en el desarrolo de software </li>
+         <li> Integración continua: Madurez y Productividad en el desarrolo de Software </li>
      </ul>
 </body>
 </html>
