agregue un nuevo curso a la lista

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
          <li> Docker: para construir sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y Productividad en el desarrolo de Software </li>
+         <li> python </li>
      </ul>
 </body>
 </html>
