--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Curso Online de Alura </title>
+     <title> Curso DevsOps de Alura </title>
 </head>
 <body>
      <ul>
