--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Curso DevsOps de Alura </title>
+     <title> Curso DevsOps Alura </title>
 </head>
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker: para construir sin dolor de cabeza </li>
+         <li> Docker </li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y Productividad en el desarrolo de Software </li>
          <li> python </li>
