--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y Productividad en el desarrolo de Software </li>
-         <li> python </li>
+         <li> python: curso backend </li>
      </ul>
 </body>
 </html>
